syntax = "proto3";

package pyexecutor;

option java_package = "com.maciekb.pyexecutor";

service PyExecutor {
    rpc Execute (ExecuteRequest) returns (ExecuteResponse) {}
}

message ExecuteRequest {
    string command = 1;
    string expression = 2;
}

message ExecuteResponse {
    string result = 1;
}
